--- a/todo.txt
+++ b/todo.txt
@@ -7,4 +7,10 @@ particle-system
 http://meshula.net/wordpress/?p=172
 http://www.gamasutra.com/view/feature/3683/a_templated_c_attribute_library_.php
 
+pyro particle editor
 
+
+gyors sat teszt
+es gyors gjk implementacio, a regi atmasolasa
+
+osszehasonlitas kulonbozo vertexszamokra //kocka, rendes model, stb
