--- a/todo.txt
+++ b/todo.txt
@@ -14,3 +14,8 @@ gyors sat teszt
 es gyors gjk implementacio, a regi atmasolasa
 
 osszehasonlitas kulonbozo vertexszamokra //kocka, rendes model, stb
+
+
+mprintersection beillesztese az utkozorendszerbe
+teljes contactinfo-generalas mpr-hez: a legutolso support pointokhoz tartozo face-ek vizsgalataval(lehet,
+hogy ehhez a meshdata-t at kell irni convex hull-ra)
